# vaadrish

./: .env.example  .gitignore  package-lock.json
api/: main.py
api/core/: config.py  logger.py
api/db/: models.py
api/routers/: aqi.py  fire.py
api/schemas/: fire_schema.py  hcho_schema.py
data/models/: metrics.json
data/outputs/: fire_hcho_daily_timeseries.csv  fire_hcho_region_summary.csv  hcho_grid_with_fire_density.csv
data/raw/gee/: hcho_grid_2024-10-01_2024-11-30.csv  sentinel5p_2024-10-01_2024-10-31.csv
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/hooks/: useAQIData.js  useFireData.js  useHCHOData.js  useWebSocket.js
frontend/src/lib/: api.js
frontend/src/store/: useAppStore.js
ml/aqi_model/: features.py  inference.py  model.py
ml/fire_correlation/: analyzer.py
notebooks/: 04_fire_correlation.ipynb
pipeline/: firms.py  load_hcho.py  openaq.py
pipeline/gee/: sentinel5p.py
vaadrish/: pyproject.toml  setup_db.py  update_metrics.py
vaadrish/api/: main.py
vaadrish/api/core/: config.py
vaadrish/api/db/: database.py
vaadrish/api/routers/: aqi.py  fire.py  hcho.py  model.py  ws.py
vaadrish/api/schemas/: aqi_schema.py
vaadrish/data/outputs/: fire_hcho_region_correlation.csv
vaadrish/data/raw/gee/: era5_2024-10-01_2024-11-30.csv
vaadrish/ml/aqi_model/: train.py
vaadrish/ml/hcho_hotspot/: detector.py
vaadrish/notebooks/: 01_data_exploration.ipynb  02_aqi_model_results.ipynb  03_hcho_hotspot_analysis.ipynb
vaadrish/pipeline/gee/: era5.py
(+18 files in other folders)
