[project]
name = "vaadrish"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "earthengine-api>=1.7.32",
    "fastapi>=0.138.1",
    "folium>=0.20.0",
    "geoalchemy2>=0.20.0",
    "geopandas>=1.1.4",
    "httpx>=0.28.1",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "loguru>=0.7.3",
    "matplotlib>=3.11.0",
    "metpy>=1.7.1",
    "nest-asyncio>=1.6.0",
    "netcdf4>=1.7.4",
    "notebook>=7.6.0",
    "numpy>=2.5.0",
    "onnx>=1.22.0",
    "onnxruntime>=1.27.0",
    "onnxscript>=0.7.0",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "rasterio>=1.5.0",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "seaborn>=0.13.2",
    "shapely>=2.1.2",
    "slowapi>=0.1.10",
    "sqlalchemy[asyncio]>=2.0.51",
    "torch>=2.12.1",
    "uvicorn[standard]>=0.49.0",
    "websockets>=16.0",
    "xarray>=2026.4.0",
    "xgboost>=3.3.0",
]
